# AIM_AIE7

./: .git_hist.swp  .gitignore  .gitignore_old  README.md  Todd  comments  git-cheatsheet.md  git_hist  rm_file_indirs.sh
02_Embeddings_and_RAG/: .comparison_example.py.swp  02_RAG_Assignment.pptx  Pythonic_RAG_Assignment.html  Pythonic_RAG_Assignment.ipynb  Pythonic_RAG_Assignment.old.ipynb  Pythonic_RAG_Assignment_Full_Presentation.pptx  Pythonic_RAG_Assignment_Full_Presentation_Code.pptx  Pythonic_RAG_Assignment_snippets.ipynb  comparison_example.py  complete_rag_pipeline.py  custom_distance_metrics.py  distance_metrics_notebook_cell.py  enhanced_rag_pipeline.py  enhanced_vector_db.py  euclidean_distance_implementation.py  fix_async_issue.py  fixed_metadata_db.py  metadataRAG.py  pdf_example.py  pdf_rag_example.py  pdf_reading_solutions.py  pyproject.toml  requirements_pdf.txt  simple_distance_metrics.py  simple_distance_test.py  working_distance_metrics.py
04_Production_RAG/: Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG.ipynb  LangSmith_and_Evaluation.ipynb  Untitled.ipynb  Untitled1.ipynb  display_svg_in_md.md  lc_expression_lenguage.md
05_Our_First_Agent_with_LangGraph/: $.md  .tavily  Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG-Copy1.ipynb  Assignment_Introduction_to_LCEL_and_LangGraph_LangChain_Powered_RAG_with_no_answers.ipynb  Intro_plan  Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb  (+4 more)
14_LangGraph_Platform/: README.md
17_Deploying_Open_Source_Endpoints/: ENDPOINT_SETUP.md  check_and_stop_endpoints.py  endpoint_slammer.ipynb  pyproject.toml  stop_endpoint.py
17_Deploying_Open_Source_Endpoints/app15/: agent.py  agent_graph_with_helpfulness.py  app_README.md  test_client.py
(+53 files in other folders)
